--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~9.0.0-next.12",
     "@angular/platform-browser-dynamic": "~9.0.0-next.12",
     "@angular/router": "~9.0.0-next.12",
+    "@ionic-native/core": "5.18.1-beta.0",
+    "@ionic-native/splash-screen": "5.18.1-beta.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
